Refactoring styles generation

--- a/demo/index.html
+++ b/demo/index.html
@@ -11,7 +11,7 @@
 
 <body class="min-h-screen bg-white text-black antialiased font-inter">
   <div class="container mx-auto p-12 min-h-screen">
-    <h1 class="text-inter-4xl font-extrabold mb-12">Demo of the Tailwind Inter Font plugin</h1>
+    <h1 class="text-4xl font-extrabold mb-12">Demo of the Tailwind Inter Font plugin</h1>
 
     <div class="flex justify-between">
       <div class="w-1/2 pr-8">
